--- a/site/tut1.css
+++ b/site/tut1.css
@@ -10,6 +10,12 @@ background-color: #f6b319;
 border-radius: 0;
 border: 0;
 }
+#logoText{
+  text-decoration: none;
+  text-shadow: #23212F;
+  text-shadow: 50px;
+  height: auto;
+}
 #logo-img{
 background: url('https://www.davidchuschinabistro.com/images/restaurant-logo_large.png') no-repeat;
 width: 150px;
@@ -65,4 +71,276 @@ background: #E7E7E7;
     color: #557c3e;
     text-align: right;
     padding-right: 15px;
+    padding-right: 0px;
   }
+button.navbar-toggler{
+  border: 2px solid #61122f  ;
+  clear: both;
+}
+#mainImage{
+  margin-top: 10px;
+  box-shadow: 0 5px #3F0C1F;
+  margin-bottom :10px; 
+}
+#call-btn{
+background-color: #f1b317;
+border-radius: 5px;
+border: 2px solid #fff;
+color: #951c49;
+max-width: 90%;
+text-align: center;
+margin-right: auto;
+margin-left: auto;
+margin-top: 10px;
+}
+#btn{
+  text-decoration: none;
+  color: #951c49;
+}
+#deliver{
+  text-align: center;
+  font-size: small;
+  margin-bottom: 10px;
+}
+#menu-tile, #specials-tile, #map-tile {
+  height: 250px;
+  width: 100%;
+  margin-bottom: 15px;
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+}
+#menu-tile:hover, #specials-tile:hover, #map-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-tile {
+  /* background: url('../images/menu-tile.jpg') no-repeat; */
+  background-position: center;
+}
+#specials-tile {
+  /* background: url('../images/specials-tile.jpg') no-repeat; */
+  background-position: center;
+}
+
+#menu-tile span, #specials-tile span, #map-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+#hours ,#address,#testimonials{
+  text-decoration: none;
+}
+.pan-footer{
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+}
+#copyr{
+  margin-top: 35px;
+}
+#hours, #address {
+  line-height: 2;
+}
+#hours > span, #address > span {
+  font-size: 1.3em;
+}
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+#testimonials {
+  font-style: italic;
+}
+#testimonials p:nth-child(2) {
+  margin-top: 25px;}
+
+/* menu page */
+.category-tile { 
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto 15px;
+}
+.category-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+.category-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-categories-title + div {
+  margin-bottom: 50px;
+}
+@media (max-width:600px) {
+  .col-xxs-12{
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+    width: 50%;
+  }
+}
+@media (max-width:457px) {
+  .col-xxs-12{
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+    width: 100%;
+  }
+}
+/* single category */
+.menu-item-tile {
+  margin-bottom: 25px;
+}
+.menu-item-tile hr {
+  width: 80%;
+}
+.menu-item-tile .menu-item-price {
+  font-size: 1.1em;
+  text-align: right;
+  margin-top: -15px;
+  margin-right: -15px;
+}
+.menu-item-tile .menu-item-price span {
+  font-size: .6em;
+}
+.menu-item-photo {
+  position: relative;
+  border: 2px solid #3F0C1F; 
+  overflow: hidden;
+  padding: 0;
+  margin-right: -15px;
+  margin-left: auto;
+  margin-bottom: 20px;
+  max-width: 250px;
+}
+.menu-item-photo div {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 80px;
+  background-color: #557c3e;
+  text-align: center;
+}
+.menu-item-description {
+  padding-right: 30px;
+}
+h3.menu-item-title {
+  margin: 0 0 10px;
+}
+.menu-item-details {
+  font-size: .9em;
+  font-style: italic;
+}
+@media (max-width: 767px) {
+  /* Header */
+  .navbar-brand {
+    padding-top: 10px;
+    height: 80px;
+  }
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 10px;
+    margin-top: 10px;
+    font-size: 5vw; /* 1vw = 1% of viewport width */
+
+  }
+  .navbar-brand p { /* Kosher cert */
+    font-size: .6em;
+    margin-top: 12px;
+  }
+  .navbar-brand p img { /* Star-K */
+    height: 20px;
+  }
+
+  #collapsable-nav a { /* Collapsed nav menu text */
+    font-size: 1.2em;
+  }
+  #collapsable-nav a span { /* Collapsed nav menu glyph */
+    font-size: 1em;
+  }
+  .pan-footer section {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .pan-footer section:nth-child(3) {
+    margin-bottom: 0; /* margin already exists on the whole row */
+  }
+  .pan-footer section hr {
+    width: 50%;
+  }
+  .menu-item-photo{
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .menu-item-tile .menu-item-price{
+  text-align: center;
+  }
+  .menu-item-description{
+    text-align: center;
+  }
+
+}
+@media (min-width:768px) and (max-width:991px) {
+  /* #logoImage{
+    visibility: hidden;
+    display: none !important;
+  } */
+  .navbar-brand {
+    padding-top: 10px;
+    height: 80px;
+  }
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 10px;
+    margin-top: 10px;
+    font-size: 5vw; /* 1vw = 1% of viewport width */
+  }
+  .navbar-brand p { /* Kosher cert */
+    font-size: .6em;
+    margin-top: 12px;
+  }
+  .navbar-brand p img { /* Star-K */
+    height: 20px;
+  }
+
+  #collapsable-nav a { /* Collapsed nav menu text */
+    font-size: 1.2em;
+  }
+  #collapsable-nav a span { /* Collapsed nav menu glyph */
+    font-size: 1em;
+  }
+  .pan-footer section {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .pan-footer section:nth-child(3) {
+    margin-bottom: 0; /* margin already exists on the whole row */
+  }
+  .pan-footer section hr {
+    width: 50%;
+  }
+}
